--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-ESF_Contact.csv
-ESF_mem_contact.csv
-ESF_contact.xlsx
-ESF_nonmem_contact.csv
-Unit_list.csv
-Unit_Members.csv
-Unit_Nonmem.csv
-Missing_Names.csv
+# Data types
+*.csv
+*.xlsx
